Button to ContactPage made and minor changes on institute page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Floorplans3"></activity>
+        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".Floorplans3" />
         <activity android:name=".Floorplans2" />
 
         <meta-data
