--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".Study_test"></activity>
+        <activity android:name=".ContactPage" />
         <activity android:name=".Floorplans3" />
         <activity android:name=".Floorplans2" />
 
